Changed button padding to prevent wrapping on "Reboot Postgres"

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -111,7 +111,7 @@ html, body {
 .btn{
     outline: none;
     cursor: pointer;
-    padding: 8px 12px;
+    padding: 8px 5px;
     border: 1px solid #eee;
     background: #fafafa;
     border-radius: 4px;
